--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
+    background-color: #8181c2;
     color: #333;
     line-height: 1.6;
-  }
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
+    text-align: center; 
+}
